Fixed overflow problem on site menu

--- a/_scss/_layout.scss
+++ b/_scss/_layout.scss
@@ -773,6 +773,10 @@ footer {
         background-color: $clr-white-hvr;
         box-shadow: 0 0 5px rgba(0, 0, 0, .4);
         @include transition-param(all, 0.4s, ease-in-out);
+        #site-menu { 
+            width: 500px;
+            padding-left: 243px;
+        }
         .navbar-header .logo-banner { 
             vertical-align: middle;
             position: relative;
